--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "brian2694/laravel-toastr": "^5.53",
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.5",
-        "laravel/framework": "6.20.12",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0"
      
     },
